--- a/frontend/src/components/Donor/Profile/style.css
+++ b/frontend/src/components/Donor/Profile/style.css
@@ -80,7 +80,38 @@
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
 }
+.colB-createdonations{
+  background-image: url("../../../img/2.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+/* .colA-createdonations{
+  margin-right: 20px;
+} */
 
-.colB-createdonations {
-  padding-top: 80px;
+/* error page */
+.errorText {
+  margin: auto;
+  margin-top: 20%;
+  width: 80%;
+}
+.errorImg {
+  margin: auto;
+  margin-top: 20%;
+  height: 80vh;
+  background-image: url("../../../img/3.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.btndiv {
+  position: relative;
+  width: auto;
+}
+.btn-right {
+  right: 0;
+  position: absolute;
+}
+.btn-left {
+  left: 0;
+  position: absolute;
 }
